# uci_adult_clustering

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
uci_adult_clustering/: .gitattributes  README.md  __init__.py  app.py  dataset.py  features.py  plots.py  requirements.txt
uci_adult_clustering/modeling/: predict.py  train.py
